--- a/css/index.css
+++ b/css/index.css
@@ -24,6 +24,17 @@ div {
     box-sizing: border-box;
 }
 
+.goback {
+    display: none;
+    position: fixed;
+    bottom: 50px;
+    right: 20px;
+    width: 38px;
+    height: 38px;
+    background: url(../images/back.png) no-repeat;
+    background-size: 38px 38px;
+}
+
 .search-index {
     display: flex;
     position: fixed;
@@ -32,6 +43,7 @@ div {
     transform: translateX(-50%);
     width: 100%;
     height: 44px;
+    z-index: 999;
     max-width: 540px;
     min-width: 320px;
     /* background-color: pink; */
@@ -86,11 +98,45 @@ div {
 }
 
 .focus {
+    position: relative;
     padding-top: 44px;
+    overflow: hidden;
 }
 
 .focus img {
     width: 100%;
+}
+
+.focus ul {
+    overflow: hidden;
+    width: 500%;
+    margin-left: -100%;
+}
+
+.focus ul li {
+    width: 20%;
+    float: left;
+}
+
+.focus ol {
+    position: absolute;
+    bottom: 5px;
+    right: 0;
+    margin: 0;
+}
+
+.focus ol li {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    background-color: #fff;
+    list-style: none;
+    border-radius: 2px;
+    transition: all .3s;
+}
+
+.focus ol li.current {
+    width: 15px;
 }
 
 .local-nav {
